--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,22 @@ altair==6.0.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+appnope==0.1.4
+asttokens==3.0.1
 attrs==25.4.0
 blinker==1.9.0
 cachetools==6.2.3
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
+debugpy==1.8.19
+decorator==5.2.1
 dnspython==2.8.0
 email-validator==2.3.0
+executing==2.2.1
 fastapi==0.123.10
 fastapi-cli==0.0.16
 fastapi-cloud-cli==0.6.0
@@ -24,21 +30,36 @@ httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
 idna==3.11
+ipykernel==7.1.0
+ipython==9.8.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+jupyter_client==8.7.0
+jupyter_core==5.9.1
 kiwisolver==1.4.9
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.8
+matplotlib-inline==0.2.1
 mdurl==0.1.2
 narwhals==2.13.0
+nest-asyncio==1.6.0
 numpy==2.3.5
 packaging==25.0
 pandas==2.2.3
+parso==0.8.5
+pexpect==4.9.0
 pillow==12.0.0
+platformdirs==4.5.1
+prompt_toolkit==3.0.52
 protobuf==6.33.2
+psutil==7.1.3
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyarrow==22.0.0
 pydantic==2.12.5
 pydantic_core==2.41.5
@@ -50,6 +71,7 @@ python-dotenv==1.2.1
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.3
+pyzmq==27.1.0
 referencing==0.37.0
 requests==2.32.5
 rich==14.2.0
@@ -62,12 +84,14 @@ sentry-sdk==2.47.0
 shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
+stack-data==0.6.3
 starlette==0.50.0
 streamlit==1.52.1
 tenacity==9.1.2
 threadpoolctl==3.6.0
 toml==0.10.2
 tornado==6.5.3
+traitlets==5.14.3
 typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
@@ -76,4 +100,5 @@ urllib3==2.6.0
 uvicorn==0.38.0
 uvloop==0.22.1
 watchfiles==1.1.1
+wcwidth==0.2.14
 websockets==15.0.1
